--- a/src/pages/notifications.html
+++ b/src/pages/notifications.html
@@ -23,7 +23,7 @@
           JCA UI KIT
         </a>
       </div>
-      <ul class="jca-topbar__nav">
+      <ul class="jca-topbar__nav d-none">
         <li class="jca-topbar__nav-item">
           <div class="jca-topbar__nav-content">
             <ion-icon class="jca-topbar__nav-icon" name="home-outline"></ion-icon>
@@ -54,6 +54,14 @@
           <div class="dropdown-menu animated fadeInUp" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="#">Logout</a>
           </div>
+        </li>
+        <li class="jca-nav-card__item">
+          <div class="jca-nav-card__item-icon">
+            <ion-icon name="calculator-outline"></ion-icon>
+          </div>
+          <a href="../pages/one-time-pin.html" class="jca-nav-card__item-link">
+            One Time Pin
+          </a>
         </li>
       </ul>
     </div>
