--- a/src/pages/pricing.html
+++ b/src/pages/pricing.html
@@ -122,6 +122,14 @@
                 Notifications
               </a>
             </li>
+            <li class="jca-nav-card__item">
+              <div class="jca-nav-card__item-icon">
+                <ion-icon name="calculator-outline"></ion-icon>
+              </div>
+              <a href="../pages/one-time-pin.html" class="jca-nav-card__item-link">
+                One Time Pin
+              </a>
+            </li>
           </ul>
         </div>
   
