--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -24,7 +24,7 @@
           JCA UI KIT
         </a>
       </div>
-      <ul class="jca-topbar__nav">
+      <ul class="jca-topbar__nav d-none">
         <li class="jca-topbar__nav-item">
           <div class="jca-topbar__nav-content">
             <ion-icon class="jca-topbar__nav-icon" name="home-outline"></ion-icon>
@@ -124,6 +124,14 @@
             </div>
             <a href="../pages/notifications.html" class="jca-nav-card__item-link">
               Notifications
+            </a>
+          </li>
+          <li class="jca-nav-card__item">
+            <div class="jca-nav-card__item-icon">
+              <ion-icon name="calculator-outline"></ion-icon>
+            </div>
+            <a href="../pages/one-time-pin.html" class="jca-nav-card__item-link">
+              One Time Pin
             </a>
           </li>
         </ul>
