--- a/src/pages/one-time-pin.html
+++ b/src/pages/one-time-pin.html
@@ -130,6 +130,14 @@
                 One Time Pin
               </a>
             </li>
+            <li class="jca-nav-card__item">
+              <div class="jca-nav-card__item-icon">
+                <ion-icon name="card-outline"></ion-icon>
+              </div>
+              <a href="../pages/credit-card.html" class="jca-nav-card__item-link">
+                Credit Card
+              </a>
+            </li>
           </ul>
         </div>
   
