amend top bar, compile js

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
     <script type="text/javascript" src="https://unpkg.com/jparticles@2.0.1/production/particle.js"></script>
   </head>
   <body>
-    <div class="jca-loader">
+    <div class="jca-loader" data-body="loader">
       <img src="./img/loader.svg" />
       <p>... LOADING ...</p>
     </div>
 
-    <div class="jca-layout d-none">
+    <div class="jca-layout d-none" data-body="content">
       <div class="jca-landing">
         <div class="jca-section jca-section--full-page jca-section--center">
           <div class="container">
@@ -89,9 +89,6 @@
     </div>
   </body>
 
-  <script type="text/javascript" src="./js/jquery-3.5.1.slim.min.js"></script>
-  <script type="text/javascript" src="./js/popper.min.js"></script>
-  <script type="text/javascript" src="./js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="./js/prism.js"></script>
-  <script type="text/javascript" src="./js/main.js"></script>
+  <script type="text/javascript" src="./js/jquery.min.js"></script>
+  <script type="text/javascript" src="./js/jca-ui-kit.min.js"></script>
 </html>
