--- a/src/pages/one-time-pin.html
+++ b/src/pages/one-time-pin.html
@@ -8,12 +8,12 @@
     <script nomodule="" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
   </head>
   <body>
-    <div class="jca-loader">
+    <div class="jca-loader" data-body="loader">
       <img src="../img/loader.svg" />
       <p>... LOADING ...</p>
     </div>
 
-    <div class="jca-layout d-none">
+    <div class="jca-layout d-none" data-body="content">
       <div class="jca-topbar">
         <div class="jca-logo">
           <a href="../index.html">
@@ -208,9 +208,6 @@
     </div>
   </body>
 
-  <script type="text/javascript" src="../js/jquery-3.5.1.slim.min.js"></script>
-  <script type="text/javascript" src="../js/popper.min.js"></script>
-  <script type="text/javascript" src="../js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="../js/prism.js"></script>
-  <script type="text/javascript" src="../js/main.js"></script>
+  <script type="text/javascript" src="../js/jquery.min.js"></script>
+  <script type="text/javascript" src="../js/jca-ui-kit.min.js"></script>
 </html>
