--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
-  <div class="jca-loader">
+  <div class="jca-loader" data-body="loader">
     <img src="../img/loader.svg" />
     <p>... LOADING ...</p>
   </div>
 
-  <div class="jca-layout d-none">
+  <div class="jca-layout d-none" data-body="content">
     <div class="jca-topbar">
       <div class="jca-logo">
         <a href="../index.html">
@@ -24,25 +24,25 @@
           JCA UI KIT
         </a>
       </div>
-      <ul class="jca-topbar__nav d-none">
+      <ul class="jca-topbar__nav">
         <li class="jca-topbar__nav-item">
           <div class="jca-topbar__nav-content">
             <ion-icon class="jca-topbar__nav-icon" name="home-outline"></ion-icon>
-            <a href="#">Home</a>
+            <a href="#">Link 1</a>
           </div>
         </li>
 
         <li class="jca-topbar__nav-item">
           <div class="jca-topbar__nav-content">
             <ion-icon class="jca-topbar__nav-icon" name="mail-outline"></ion-icon>
-            <a href="#">Inbox</a>
+            <a href="#">Link 2</a>
           </div>
         </li>
 
         <li class="jca-topbar__nav-item">
           <div class="jca-topbar__nav-content">
             <ion-icon class="jca-topbar__nav-icon" name="today-outline"></ion-icon>
-            <a href="#">Consultations</a>
+            <a href="#">Link 3</a>
           </div>
         </li>
 
@@ -50,7 +50,7 @@
           <div class="jca-topbar__nav-content dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
             <ion-icon class="jca-topbar__nav-icon" name="person-circle-outline"></ion-icon>
-            <a href="#">Profile</a>
+            <a href="#">Link 4</a>
           </div>
           <div class="dropdown-menu animated fadeInUp" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="#">Logout</a>
@@ -475,9 +475,6 @@
   </div>
 </body>
 
-<script type="text/javascript" src="../js/jquery-3.5.1.slim.min.js"></script>
-<script type="text/javascript" src="../js/popper.min.js"></script>
-<script type="text/javascript" src="../js/bootstrap.min.js"></script>
-<script type="text/javascript" src="../js/prism.js"></script>
-<script type="text/javascript" src="../js/main.js"></script>
+<script type="text/javascript" src="../js/jquery.min.js"></script>
+<script type="text/javascript" src="../js/jca-ui-kit.min.js"></script>
 </html>
